; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c_default_tl_rpcs_execute.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c_default_tl_rpcs_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 }

@RPC_INVOKE_REQ = common dso_local global i32 0, align 4
@SKIP_ALL_BYTES = common dso_local global i32 0, align 4
@TL_IN_PID = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @default_tl_rpcs_execute(%struct.connection* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.connection*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load %struct.connection*, %struct.connection** %5, align 8
  %9 = call i32 @rpc_target_insert_conn(%struct.connection* %8)
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @RPC_INVOKE_REQ, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @SKIP_ALL_BYTES, align 4
  store i32 %14, i32* %4, align 4
  br label %24

15:                                               ; preds = %3
  %16 = load %struct.connection*, %struct.connection** %5, align 8
  %17 = call %struct.TYPE_2__* @RPCS_DATA(%struct.connection* %16)
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32* %18, i32** @TL_IN_PID, align 8
  %19 = call i32 (...) @WaitAioArrClear()
  %20 = load %struct.connection*, %struct.connection** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @tl_query_act(%struct.connection* %20, i32 %21, i32 %22)
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %15, %13
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @rpc_target_insert_conn(%struct.connection*) #1

declare dso_local %struct.TYPE_2__* @RPCS_DATA(%struct.connection*) #1

declare dso_local i32 @WaitAioArrClear(...) #1

declare dso_local i32 @tl_query_act(%struct.connection*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
